# megaraid-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  TROUBLESHOOTING.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: journald-megaraid.conf  megaraid-dashboard.service
deploy/nginx/: megaraid.conf.sample
docs/: ARCHITECTURE.md  PROXY-SETUP.md  RUNBOOK.md  SECURITY-AUDIT-2026-Q2-pen.md  SECURITY-AUDIT-2026-Q2.md  THREAT-MODEL.md  roadmap.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_pd_temp_state.py  0003_events_notified_at.py  0004_controller_roc_temperature.py  0005_operator_action_username.py  0006_pd_disk_group.py  0007_system_state.py
scripts/: ci.sh  install.sh  preflight.sh  security-scan.sh  uninstall.sh
src/megaraid_dashboard/: __init__.py  __main__.py  app.py  config.py
tasks/: PR-001.md  PR-002.md  PR-003.md  PR-004.md  PR-005.md  PR-006.md  PR-007.md  PR-008.md  PR-009.md  PR-010.md  PR-011.md  PR-012.md  PR-013.md  PR-014.md  PR-015.md  PR-016.md  PR-017.md  PR-018.md  PR-019.md  PR-020.md  PR-021.md  PR-022.md  PR-023.md  PR-024.md  PR-025.md  PR-026.md  PR-027.md  PR-028.md  PR-029.md  PR-030.md  PR-031.md  PR-032.md  PR-033.md  PR-034.md  PR-035.md  PR-036.md  PR-037.md  PR-038.md  PR-039.md  PR-040.md  (+26 more)
tests/: conftest.py  test_app.py  test_config.py  test_deploy.py  test_smoke.py  test_versioning.py
(+144 files in other folders)
